# midas-coffee-machine

./: .gitignore  Implementation_Plan_Dtray_Detection.md  MIDAS.md  SYSTEM_USER_GUIDE.md  calibrate_midas_volume.py  calibration_params copy.yml  detect_cup_volum_dualcamera2.docx  midas_calibration.yaml  midas_calibration_oldlogitech.yaml  read_docx.py  report.md  run_volumecup_estimation.py  run_volumecup_midas.py  stereo_calibration_gui.py  test_canny.py  tray_detector_validation_report.md  update.py  validation_report.md  zipfile
00_documentation/: 00_OVERVIEW_METHODOLOGY.md  01_THEORY_Z_TRAY_ESTIMATION.md  02_THEORY_Z_RIM_ESTIMATION.md  03_THEORY_METHOD_B_SLAT_DETECTION.md  03_THEORY_MULTIVARIATE_ESTIMATION.md  03_THEORY_PARALLAX_KEYPOINT_FUSION.md  04_THEORY_YOLO_AND_ROI_MANAGEMENT.md  INDUSTRIAL_THEORY_REPORT.md
01_calibration/: calibrate_depth_multivariate.py  calibrate_midas_polynomial.py  calibration_points_multivariate.json  calibration_points_multivariate_backup.json  visualize_curve.py
02_evaluation/: evaluate_depth_multivariate.py  evaluate_test_data.py  validation_report.md
03_diagnostics/: detect_camera_height_midas.py  test_single_image.py
04_dataset/: collect_test_data.py  test_points.json
05_production/: run_volumecup_midas.py
05_tray_pattern_recog/: tray_detector.py
06_aruco_marker/: README.md  aruco_detector.py  environment_aruco.yaml  generate_marker.py  run_aruco.py  summarize_reports.py
07_midas_aruco_fusion/: README.md  calibrate_fisheye.py  calibration copy.json  calibration.json  calibration_fisheye_default.json  camera_parameters.json  compare_anypoint_modes.py  deep_refactor.py  environment_fusion.yaml  fix_live.py  focal_length_calibration.yaml  refactor_script.py  run_fusion.py  test_aruco.py
07_midas_aruco_fusion/core/: anypoint_controller.py  (+7 more)
99_archive/: Implementation_Plan_Dtray_Detection.docx  calibrate_midas_volume.py  detect_cup_volume3.docx  single_camera_method_comparison.docx  stereo_calibration_data.json
midas_volumecup/: camera_config.py  depth.py  detector.py  volume_math.py
tray_detection_C/: CMakeLists.txt  Tray_Detection_C_Guide.md  toolchain_rzv2h.cmake
tray_detection_C/include/: camera_utils.h  config.h  detector.h  drpai_detector.h  fusion.h  method_a.h  method_b.h  method_c.h  onnx_detector.h  pipeline.h
tray_detection_C/src/: camera_utils.cpp  config.cpp  drpai_detector.cpp  fusion.cpp  main.cpp  method_a.cpp  method_b.cpp  method_c.cpp  onnx_detector.cpp  pipeline.cpp
tray_detector/: README.md  Tray_Detector_README.md  __init__.py  calibrate_tray.py  camera_utils.py  config.py  fusion.py  method_a.py  method_b.py  method_c.py  pipeline.py  run_tray_detector.py  tray_calibration.yaml
(+230 files in other folders)
